--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
   <title>Document</title>
 
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <audio muted autoplay loop id="myaudio" style="display: none"></audio>
+ 
+
 </head>
 
 <body>
   <canvas id="canvas"></canvas>
 
-  <p>testststststs</p>
+  <button id="start">
+    Empezar
+  </button>
 
-
+  <script type="text/javascript" src="js/start.js"></script>
   <script type="text/javascript" src="js/background.js"></script>
   <script type="text/javascript" src="js/quaffle.js"></script>
   <script type="text/javascript" src="js/player.js"></script>
