--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
   <canvas id="canvas"></canvas>
-
-  <button id="start">
-    Empezar
+  <img class="previo-image" src="images/previo.jpg">
+  <button class="button-start" id="start">
+   JUGAR
   </button>
 
   <script type="text/javascript" src="js/start.js"></script>
