--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <script type="text/javascript" src="js/bludger.js"></script>
   <script type="text/javascript" src="js/snitch.js"></script>
   <script type="text/javascript" src="js/scoreboard.js"></script>
+  <script type="text/javascript" src="js/screen.js"></script>
 
   <script type="text/javascript" src="js/game.js"></script>
 
