--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body>
+<body class="bounceInDown">
   <canvas id="canvas"></canvas>
   <img class="previo-image" src="images/previo.jpg">
   <button class="button-start" id="start">
